--- a/templates/login.html
+++ b/templates/login.html
@@ -83,6 +83,7 @@
             <input type="password" id="password" name="password" required>
 
             <button type="submit">Entrar</button>
+        </form>
     </div>
 
 </body>
