--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agendamento de Curso - Brose</title>
     <link rel="stylesheet" href="{% static 'cursos/style.css' %}">
+    <script src="{% static 'cursos/script.js' %}"></script>
 </head>
 <body>
     <div>
@@ -41,16 +42,16 @@
                 <h2>Agendamento de curso <span class="calendar-icon"></span></h2>
                 
                 <form method="post">
-                {% csrf_token %}                
-                <div class="form-group">
-                    <label for="employee">Employee</label>
-                    <input type="text" id="employee" name="employee" placeholder="Digite o nome do funcionário">
-                </div>
-                
-                <div class="form-group">
-                    <label for="nome-funcionario">Nome do funcionário</label>
-                    <input type="text" id="nome-funcionario" name="nome-funcionario" placeholder="Digite o nome do funcionário">
-                </div>
+                    {% csrf_token %}
+                        <div class="form-group">
+                            <label for="employee">Employee</label>
+                            <input type="text" id="funcionario_id" name="funcionario_id" placeholder="Digite o nome do funcionário">
+                        </div>
+    
+                        <div class="form-group">
+                            <label for="nome-funcionario">Nome do funcionário</label>
+                            <input type="text" id="nome-funcionario" name="nome-funcionario" placeholder="Digite o nome do funcionário"readonly>
+                        </div>
                 
                 <div class="form-group">
                     <label for="skill">Nome da Skill trabalhada</label>
@@ -58,13 +59,13 @@
                 </div>
                 
                 <div class="form-group">
-                    <label for="data-inicio">Data de início</label>
-                    <input type="date" id="data-inicio" name="data-inicio">
+                    <label for="{{ form.data_inicio.id_for_label }}">Data de Início</label>
+                    {{ form.data_inicio }}
                 </div>
-                
+
                 <div class="form-group">
-                    <label for="data-conclusao">Data de conclusão</label>
-                    <input type="date" id="data-conclusao" name="data-conclusao">
+                    <label for="{{ form.data_termino.id_for_label }}">Data de Conclusão</label>
+                    {{ form.data_termino }}
                 </div>
 
                 <div class="form-group-buttom">
