--- a/templates/funcionarios.html
+++ b/templates/funcionarios.html
@@ -48,7 +48,7 @@
                         <div class="labels">
 
                             <label class = "skills_lista">Skills</label>
-                            {{ form.skill }}
+                            <input type="text" id="myInput" placeholder="Digite uma skill...">
 
                         </div>
 
