--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -33,7 +33,7 @@
         <ul>
             <li><a href="#"><img src="{% static 'tela_inicial/assets/logo_casa_branca.png' %}",>Página inicial</a></li>
             <li><a href="/funcionarios/"><img src="{% static 'tela_inicial/assets/icone_silhueta.png' %}">Funcionários</a></li>
-            <li><a href="/cursos/"><img src="{% static 'tela_inicial/assets/icone_curso_livro.png' %}">Cursos</a></li>
+            <li><a href="/cursos/"><img src="{% static 'tela_inicial/assets/id-card.png' %}">Gerenciamento de Registros</a></li>
         </ul>
     </aside>
     
