--- a/setup/static/cursos/style.css
+++ b/setup/static/cursos/style.css
@@ -154,73 +154,119 @@ body {
 .content h2 {
     color: #b81c34;
     justify-content: center;
-    font-size: 1.7rem;
+    font-size: 2.0rem;
     display: flex;
     align-items: center;
     margin-bottom: 50px;
 }
 
-.calendar-icon::before {
-    content: "🗓️";
-    font-size: 1.2rem;
+.id-icon::before {
+    content: "🪪";
+    font-size: 2.0rem;
     margin-left: 8px;
 }
 
-#agendar {
-    padding: 10px 30px;
-    font-weight: 600;
+#adicionar-funcionario, #inativar-funcionario, #adicionar-skill, #deletar-skill {
+    padding: 20px 70px;
+    font-weight: 800;
     box-shadow: inset 0px 4px 4px rgba(0.25, 0, 0, 0.25);
     color: #fff;
     background: #CA0039;
     border: none;
     border-radius: 7px;
     cursor: pointer;
+    margin-bottom: 1.2cm;
 }
 
-/* Estilo dos campos de texto e data */
-.form-group {
-    margin-bottom: 15px;
-    text-align: left;
-}
-
-.form-group label {
-    display: block;
-    font-size: 1rem;
-    color: #333;
-    margin-bottom: 5px;
-}
-
-.form-group input[type="text"],
-.form-group input[type="date"] {
+/* Estilo do Pop-up */
+.popup {
+    display: none;
+    /* Inicialmente escondido */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
     width: 100%;
-    box-shadow: inset 0px 4px 4px rgba(0.1, 0, 0, 0.1);
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    /* Centraliza horizontalmente */
+    align-items: center;
+    /* Centraliza verticalmente */
+}
+
+.popup-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 50%;
+    max-width: 600px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+
+
+.close {
+    color: red;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    margin: 10px 0 5px 0;
+    font-weight: bold;
+}
+
+input[type="text"],
+textarea {
     padding: 10px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f0f0f0;
-    font-size: 1rem;
-    color: #333;
-    box-sizing: border-box;
+    border-radius: 10px;
+    width: 90%;
 }
 
-.form-group input[type="text"]:focus,
-.form-group input[type="date"]:focus {
-    outline: none;
-    border-color: #b81c34;
-    box-shadow: 0px 0px 5px rgba(184, 28, 52, 0.5);
+textarea {
+    height: 100px;
 }
 
-@media (max-width: 768px) {
-    .barra-lateral {
-        width: 60px;
-    }
-    
-    .content {
-        padding: 15px;
-    }
-    
-    .form-group input[type="text"],
-    .form-group input[type="date"] {
-        padding: 8px;
-    }
+.buttons {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    color: #C1002C;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+.close:hover {
+    transform: scale(1.2);
+}
+
+form button {
+    background-color: #C1002C;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    width: 50%;
+
+}
+form button:hover {
+    background-color: #90001f;
 }
