--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -21,7 +21,7 @@
             <img src="{% static 'tela_inicial/assets/brose_icon.png' %}" alt="Logo">
         </div>
         <div class="user-info">
-            <span class="user-name">Nome do Usuário</span>
+            <span class="user-name">Paulo Moreira</span>
         <div class="logout">
             <a href="/login/"><img src="{% static 'tela_inicial/assets/logout.png' %}" title="Sair" alt="Logout"></a> <!-- Exemplo: se a imagem estiver na pasta 'images' -->
         </div>
