--- a/setup/static/funcionarios/style.css
+++ b/setup/static/funcionarios/style.css
@@ -2,6 +2,7 @@ body {
     background-color: #d3d2d2;
     font-family: Arial;
 }
+
 /* Barra superior */
 .top-bar {
     width: 100%;
@@ -28,10 +29,13 @@ body {
     width: auto;
     margin-right: 40px;
 }
+
 .logout .tooltip {
-    visibility: hidden; /* Oculta a tooltip por padrão */
+    visibility: hidden;
+    /* Oculta a tooltip por padrão */
     position: absolute;
-    bottom: 100%; /* Posiciona acima do ícone */
+    bottom: 100%;
+    /* Posiciona acima do ícone */
     left: 50%;
     transform: translateX(-50%);
     background-color: #333;
@@ -46,7 +50,8 @@ body {
 }
 
 .logout:hover .tooltip {
-    visibility: visible; /* Exibe a tooltip ao passar o mouse */
+    visibility: visible;
+    /* Exibe a tooltip ao passar o mouse */
     opacity: 1;
 }
 
@@ -78,20 +83,25 @@ body {
 
 /* Estilo do ícone de logout */
 .logout img {
-    height: 20px; /* Ajuste proporcional do ícone de logout */
+    height: 20px;
+    /* Ajuste proporcional do ícone de logout */
     width: auto;
     cursor: pointer;
 }
 
 .barra-lateral {
     overflow-y: auto;
-    width: 40px; /* Define a largura da barra lateral */
+    width: 40px;
+    /* Define a largura da barra lateral */
     background-color: #CA0039;
-    background-image: url('caminho-para-sua-imagem.png'); /* Caminho da imagem */
-    background-size: cover; /* Faz a imagem cobrir toda a barra */
+    background-image: url('caminho-para-sua-imagem.png');
+    /* Caminho da imagem */
+    background-size: cover;
+    /* Faz a imagem cobrir toda a barra */
     padding: 15px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    height: 100vh; /* Faz com que ocupe a altura total da página */
+    height: 100vh;
+    /* Faz com que ocupe a altura total da página */
     position: fixed;
     left: 0;
     top: 0;
@@ -99,10 +109,12 @@ body {
 
 .barra-lateral img {
     width: 80%;
-    max-width: 150px; /* Ajuste o tamanho máximo da imagem */
+    max-width: 150px;
+    /* Ajuste o tamanho máximo da imagem */
     height: auto;
     display: block;
-    margin: 50px auto 0; /* Espaçamento superior de 20px */
+    margin: 50px auto 0;
+    /* Espaçamento superior de 20px */
 }
 
 .barra-lateral ul {
@@ -145,7 +157,8 @@ main {
     width: 90%;
 }
 
-.skills, .nome {
+.skills,
+.nome {
     display: flex;
     justify-content: space-evenly;
 
@@ -165,11 +178,12 @@ main {
     width: 20%;
 }
 
-.labels, .nome label {
+.labels,
+.nome label {
     font-weight: bold;
     color: #CA0039;
     margin-bottom: 7px;
-} 
+}
 
 
 .labels input {
@@ -179,6 +193,7 @@ main {
     padding: 10px;
     border-radius: 5px;
 }
+
 
 .nome input {
     width: 100%;
@@ -200,6 +215,7 @@ main {
 }
 
 .pesquisar {
+
     padding: 10px 30px;
     box-shadow: inset 0px 4px 4px rgba(0.25, 0, 0, 0.25);
     color: #fff;
@@ -207,18 +223,28 @@ main {
     border: none;
     border-radius: 7px;
     cursor: pointer;
-    
+
 }
 
 .pesquisar:hover {
     background-color: rgba(0, 0, 0, 0.398)
 }
 
-.botoes-exportar {
+.botoes-exportar button {
     display: flex;
     align-items: end;
-    width: 20%;
     justify-content: space-evenly;
+    padding: 10px 30px;
+    box-shadow: inset 0px 4px 4px rgba(0.25, 0, 0, 0.25);
+    color: #fff;
+    background: #CA0039;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+}
+
+.botoes-exportar button:hover {
+    background-color: rgba(0, 0, 0, 0.398)
 }
 
 .rolagem {
@@ -241,7 +267,7 @@ main {
     box-shadow: 2px 2px 5px;
     color: #000000;
     top: 0;
-    z-index: 10; 
+    z-index: 10;
 }
 
 .tabela thead th {
@@ -269,8 +295,8 @@ main {
 }
 
 .tabela td {
-    word-wrap: break-word;  
-    max-width: 150px;       
+    word-wrap: break-word;
+    max-width: 150px;
 }
 
 .tabela tbody tr:last-child td {
@@ -279,28 +305,36 @@ main {
 
 
 /* Estilo do Pop-up */
+/* Estilo do Pop-up */
 .popup {
-    display: none; /* Inicialmente escondido */
+    display: none;
+    /* Inicialmente escondido */
     position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
-    justify-content: center; /* Centraliza horizontalmente */
-    align-items: center; /* Centraliza verticalmente */
+    margin-top: 17px;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    /* Centraliza horizontalmente */
+    align-items: center;
+    /* Centraliza verticalmente */
 }
 
 .popup-content {
     background-color: white;
-    padding: 20px;
+    padding: 30px;
     border-radius: 10px;
-    width: 50%;
-    max-width: 600px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    width: 40%;
+    height: 82%;
+    max-width: 500px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     position: relative;
+    margin-top: 10px;
 }
+
 
 .close {
     color: red;
@@ -320,12 +354,13 @@ label {
     font-weight: bold;
 }
 
-input[type="text"], textarea {
+input[type="text"],
+textarea {
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    width: 100%;
+    width: 90%;
 }
 
 textarea {
@@ -337,7 +372,9 @@ textarea {
     justify-content: flex-end;
 }
 
-button.exportar, button.imprimir {
+button.exportar,
+button.imprimir,
+button.salvar {
     background-color: #C1002C;
     color: white;
     border: none;
@@ -347,6 +384,8 @@ button.exportar, button.imprimir {
     cursor: pointer;
 }
 
-button.exportar:hover, button.imprimir:hover {
+button.exportar:hover,
+button.imprimir:hover,
+button.salvar:hover {
     background-color: #90001f;
 }
